--- a/package.json
+++ b/package.json
@@ -3,13 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/system": "^4.12.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
+    "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-toast-notifications": "^2.4.4",
+    "react-toastify": "^7.0.4",
+    "web-vitals": "^1.1.2",
+    "clsx": "^1.1.1",
+    "formik": "^2.1.5",
+    "history": "^5.0.0",
+    "prop-types": "^15.7.2",
+    "react-feather": "^2.0.8",
+    "react-helmet": "^6.1.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
